--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col-1 masthead-logo">
                     <img src="img/" class="mast-logo" />
                     <hr class="masthead__inner--line">
-                    <h1 class="main-heading">Go Kart International</h1>
+                    <h1 class="heading-text">Go Kart International</h1>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="col-1 ">
                 <div class="welcome__section--top">
                     <div class="welcome__section--top__inner">
-                        <h2 class="welcome-heading">Welcome To Our Website</h2>
+                        <h2 class="primary-heading-text">Welcome To Our Website</h2>
                         <hr class="welcome__section--top__inner--line">
                     </div>
 
@@ -116,12 +116,12 @@
             <div class="col-2 grow">
                 <div class="welcome__section--content">
                     <div class="welcome__section--content__inner">
-                        <h3 class="primary-heading">Go Kart International Love Go Karting...</h3>
-                        <p>Here at go kart international, we love our business and our customers.We pride ourselves in
+                        <h3 class="secondary-heading-text">Go Kart International Love Go Karting...</h3>
+                        <p class="basic-paragraph">Here at go kart international, we love our business and our customers.We pride ourselves in
                             keeping our karts in tip top shape to ensure a high level of safety, also our karts are
                             child friendly.We are situated on the fair at fantasy island themed resort and we cant wait
                             to meet you you.</p>
-                        <h4 class="secondary-heading">We Are Open 7 A Week Days March Till November</h4>
+                        <h4 class="secondary-heading-text">We Are Open 7 A Week Days March Till November</h4>
                         <p class="call-text">Call Now And Book On:</p>
                         <div class="btn-wrapper">
                             <a href="tel:+447882084717" class="btn-primary">07882084717</a>
@@ -138,7 +138,7 @@
                 <div class="cta__section--box">
                     <i class="fas fa-envelope fa-7x"></i>
 
-                    <h4>Email</h4>
+                    <h4 class="secondary-heading-text">Email</h4>
                     <p>Email Address:info@gokartinternational.com</p>
                 </div>
 
@@ -146,14 +146,14 @@
             <div class="col-3">
                 <div class="cta__section--box">
                     <i class="fas fa-phone fa-7x"></i>
-                    <h4>Phone</h4>
+                    <h4 class="secondary-heading-text">Phone</h4>
                     <p>Call Now On: 07882084717</p>
                 </div>
             </div>
             <div class="col-3">
                 <div class="cta__section--box">
                     <i class="fas fa-book-open fa-7x"></i>
-                    <h4>Bookings</h4>
+                    <h4 class="secondary-heading-text">Bookings</h4>
                     <p>Book Now : 07882084717</p>
                 </div>
             </div>
@@ -168,7 +168,7 @@
             <div class="col-2">
                <div class="teams__section--content">
                 <div class="teams__section--content__inner">
-                    <h4>Book An Event With Us.</h4>
+                    <h4 class="secondary-heading-text">Book An Event With Us.</h4>
                     <p>Looking for a great day out for a team event, party even a hen or stag? no problem give us a call and
                         we will get you booked in for a spot to ensure we have a space ready for when you are here, as we
                         can get very busy especially in the high season.</p>
@@ -205,27 +205,27 @@
     </section>
     <section class="cta__section">
         <div class="row">
-            <div class="col-3">
-                <h4>Working Teams? Anytime..</h4>
+            <div class="col-3 cta__section--circle-box">
+                <h4 class="secondary-heading-text">Working Teams? Anytime..</h4>
                 <img class="img-circle" src="img/team.jpg">
-                <p>A great team building exercise for any working group, and we can reserve a space for your party so
+                <p class="basic-paragraph">A great team building exercise for any working group, and we can reserve a space for your party so
                     give us a call.</p>
                 <div class="btn-wrapper">
                     <a href="tel:+447882084717" class="btn-primary">07882084717</a>
                 </div>
             </div>
-            <div class="col-3">
-                <h4>Birthday Party? No Problem..</h4>
+            <div class="col-3 cta__section--circle-box">
+                <h4 class="secondary-heading-text">Birthday Party? No Problem..</h4>
                 <img class="img-circle" src="img/birthday.jpg">
-                <p>We can reserve a time for any sized party at your requirements so why wait give a call now.</p>
+                <p class="basic-paragraph">We can reserve a time for any sized party at your requirements so why wait give a call now.</p>
                 <div class="btn-wrapper">
                     <a href="tel:+447882084717" class="btn-primary">07882084717</a>
                 </div>
             </div>
-            <div class="col-3">
-                <h4>Stags And Hens? Easy..</h4>
+            <div class="col-3 cta__section--circle-box">
+                <h4 class="secondary-heading-text">Stags And Hens? Easy..</h4>
                 <img class="img-circle" src="img/hen-party.jpg">
-                <p>A great activity for hens and stags and you can reserve a time for any sized party at your
+                <p class="basic-paragraph">A great activity for hens and stags and you can reserve a time for any sized party at your
                     requirements so why wait give a call now..</p>
                 <div class="btn-wrapper">
                     <a href="tel:+447882084717" class="btn-primary">07882084717</a>
@@ -238,7 +238,7 @@
         <div class="find-us__section--wrapper">
             <div class="row">
                 <div class="col-1 ">
-                    <h4 class="secondary-heading">Find Us At Fantasy Island Ingoldmells Skegness</h4>
+                    <h4 class="secondary-heading-text">Find Us At Fantasy Island Ingoldmells Skegness</h4>
                     <hr class="find-us__section--wrapper__line">
                     <p>We are located on the fair at fantasy island resort, come give us a visit for some high octane
                         fun.</p>
@@ -252,11 +252,11 @@
         </div>
 
     </section>
-    <section class="about__section text-center" id="about">
+    <section class="about__section" id="about">
         <div class="row">
             <div class="col-2">
-                <h4>All About Us</h4>
-                <p>Go kart international has been active on fantasy island for over ten years, we love our job and our
+                <h4 class="secondary-heading-text">All About Us</h4>
+                <p class="basic-paragraph">Go kart international has been active on fantasy island for over ten years, we love our job and our
                     customers.We are open 7 days a week from march till november.</p>
                 <p>With great value for money, and a high octane fun experience for all ages, we hope to offer all the
                     fun karting you could hope for.</p>
@@ -264,13 +264,13 @@
                     <a href="tel:+447882084717" class="btn-secondary">07882084717</a>
                 </div>
             </div>
-            <div class="col-2 welcome-img">
-                <img class="img-responsive" src="img/go-kart-international-skegness-boy-riding-kart.jpg" />
+            <div class="col-2">
+                <img class="img-teams" src="img/go-kart-international-skegness-boy-riding-kart.jpg" />
             </div>
         </div>
 
     </section>
-    <section class="cta__section text-center" id="btm-cta">
+    <section class="cta__section" id="btm-cta">
         <div class="row">
             <div class="col-3">
 
@@ -291,19 +291,19 @@
     </section>
     <section class="contact__section " id="contact">
         <div class="row">
-            <div class="col-2  details">
-                <h4 class="text-center">Contact Us</h4>
-                <div class="text-center">
+            <div class="col-2 ">
+                <h4>Contact Us</h4>
+                <div>
                     <i class="fas fa-phone fa-10x text-center"></i>
                 </div>
 
-                <p class="contact-call-text">Phone Number:<a href="tel:+447464842678">07882084717</a></p>
-                <p class="contact-call-text">Emaill Adress:<a
+                <p>Phone Number:<a href="tel:+447464842678">07882084717</a></p>
+                <p>Emaill Adress:<a
                         href="mailto:info@gokartinternational.com">info@gokartinternational.com</a></p>
-                <p class="contact-call-text">Address: Go Kart International, Fantasy Island Resort,</p>
-                <p class="contact-call-text">Address: Sea Lane, Ingoldmells</p>
-                <p class="contact-call-text">Address: Skegness</p>
-                <p class="contact-call-text">Postcode: PE25 1RH</p>
+                <p>Address: Go Kart International, Fantasy Island Resort,</p>
+                <p>Address: Sea Lane, Ingoldmells</p>
+                <p>Address: Skegness</p>
+                <p>Postcode: PE25 1RH</p>
             </div>
             <div class="col-2 ">
                 <h4>Our Contact Form</h4>
