added blur on image hover

--- a/index.html
+++ b/index.html
@@ -203,11 +203,15 @@
         </div>
 
     </section>
-    <section class="cta__section">
+    <section class="cta__section cta__section--orange">
         <div class="row">
             <div class="col-3 cta__section--circle-box">
                 <h4 class="secondary-heading-text">Working Teams? Anytime..</h4>
-                <img class="img-circle" src="img/team.jpg">
+                <figure class="circle-wrapper">
+                    <img class="img-circle" src="img/team.jpg">
+                    <figcaption class="fig-captian"><a href="#" class="circle-wrapper__link">Book Now!</a></figcaption>
+                </figure>
+               
                 <p class="basic-paragraph">A great team building exercise for any working group, and we can reserve a space for your party so
                     give us a call.</p>
                 <div class="btn-wrapper">
@@ -270,7 +274,7 @@
         </div>
 
     </section>
-    <section class="cta__section" id="btm-cta">
+    <section class="cta__section " id="btm-cta">
         <div class="row">
             <div class="col-3">
 
